# mistake-analyzer

./: App and API link.txt  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py
