[project]
[project.scripts]
server = "server.app:app"
name = "mistake-analyzer"
version = "0.1.0"
description = "Mistake Analyzer Hackathon Project"
authors = [
    { name="Krushna Pisal" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "torch",
    "transformers",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
start = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]