[project]
name = "mistake-analyzer"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "torch",
    "transformers",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]