[project]
name = "mistake-analyzer"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]